--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,16 +6,18 @@ on:
       - main  # Set a branch name to trigger deployment
   pull_request:
 
-permissions:
-  contents: write
-
 jobs:
   deploy:
-    runs-on: ubuntu-22.04
     permissions:
+      pages: write      
       contents: write
+      id-token: write   
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
@@ -23,7 +25,7 @@ jobs:
           fetch-depth: 0
           
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v4
+        uses: actions/deploy-pages@v4 
         # If you're changing the branch from main,
         # also change the `main` in `refs/heads/main`
         # below accordingly.
